     comments.
   * Added the concept of `alt_driver_names` in `nutscan_device_t` structure
     for ability to suggest a comment with other possibly compatible driver
     names in configuration snippets generated by `nut-scanner`; practical
     support implemented for USB connected drivers. Library API version
     bumped to 2.3.0 accordingly.


Release notes for NUT 2.8.1 - what's new since 2.8.0
----------------------------------------------------

https://github.com/networkupstools/nut/milestone/8

 - "UPS management protocol", Informational RFC 9271 published
   by IETF at https://www.rfc-editor.org/info/rfc9271 and the
   IANA port number registry was updated accordingly at
   https://www.iana.org/assignments/service-names-port-numbers/service-names-port-numbers.xhtml?search=3493
   (even though this RFC is not formally an Internet Standard)

 - NUT documentation files were rearranged, renaming some to `*.adoc` pattern
   to facilitate automatic rendering in GitHub and IDE GUIs, and adding recipe
   support for GitHub issue/PR links. This `NEWS` file is now proper asciidoc
   rendered into `release-notes.pdf` (and HTML versions). [issue #1953, PR #2048]
   Internally, the documents would use a new way to define cross-linking to
   other pages and their chapters, to facilitate different renderers (including
   GitHub UI), and file names created for "chunked HTML" documentation format
   will no longer have the "chapter number, section number" format which is
   not easy to maintain over time with independent builds of documentation
   in NUT and the actual and historic snapshots for nut-website for example.
   Chapter/Section names will be adapted to produce "chunked HTML" file names
   instead. Documentation links rendered in GitHub UI should point to the HTML
   pages served by a current iteration of the NUT website. [PR #226, PR #669]

 - A new `configure --enable-spellcheck` toggle should add spelling checks