@@ -21,6 +21,10 @@ serving as model + view) in order to keep the two parts independent.
 That class was subsequently renamed to `PyNUTClient` since version 1.1
 of the original project, allowing to develop other classes nearby later.
 
+It is published to PyPI repository as
+link:https://pypi.org/project/PyNUTClient/[PyNUTClient]
+and so should be installable with `pip` tooling.
+
 Currently the module is regularly tested to work with Python interpreter
 versions 2.7, 3.4, 3.5 and 3.7.
 
