@@ -50,6 +50,10 @@ https://github.com/networkupstools/nut/milestone/10
      support implemented for USB connected drivers. Library API version
      bumped to 2.3.0 accordingly.
 
+ - NUT CI improvements:
+   * Added publishing recipes for PyNUT client bindings for NUT, so it ends
+     up in the link:https://pypi.org/project/PyNUTClient[PyPI repository].
+     [#2158]
 
 Release notes for NUT 2.8.1 - what's new since 2.8.0
 ----------------------------------------------------
